# dmenu

./: CMakeLists.txt  config.def.h  config.def.h.orig  dmenu.c  dmenu.c.orig  dmenu_path  dmenu_run  drw.h  flake.nix
